trying fixed background size on mobile

--- a/src/Components/UI/Backgrounds/Background.module.css
+++ b/src/Components/UI/Backgrounds/Background.module.css
@@ -12,6 +12,6 @@
 
 @media only screen and (max-width: 600px) {
     .Background {
-        height: calc(100vw + 110vw);
+        background-size: auto 210vw;
     }
 }
